# zsig

./: AUTHORS  CMakeLists.txt  Doxyfile  ProjectHome.md  README
doc/: logo.xcf
doc/html/: annotated.html  classes.html  classzsig_1_1ZernikePolynomialsBasisT-members.html  classzsig_1_1ZernikePolynomialsBasisT.html  example_zpol_8cc-example.html  example_zproj_8cc-example.html  examples.html  files.html  formula.repository  navtree.js  pages.html  zpolbasist_8hh.html  zpolbasist_8hh_source.html  zsig_8hh_source.html
doc/html/search/: all_66.html  all_6f.html  all_70.html  all_7a.html  functions_6f.html  functions_7a.html
doc/latex/: annotated.tex  classzsig_1_1ZernikePolynomialsBasisT.tex  compute_R.tex  doxygen.sty  example_zpol_8cc-example.tex  example_zproj_8cc-example.tex  files.tex  zpolbasist_8hh.tex
include/: signaturet.hh  vec.hh  zpolbasist.hh  zsig.hh
src/: CMakeLists.txt  app_compute_signature.cc  app_paint_signature.cc  example_mesh.cc  example_sig.cc  example_zpol.cc  example_zproj.cc
trunk/: AUTHORS  CMakeLists.txt  Doxyfile  README
trunk/doc/html/: compute_R.html  functions.html  functions_func.html  functions_rela.html  functions_type.html  index.html  zsig_8hh.html
trunk/doc/html/search/: all_63.html  all_72.html  all_76.html  classes_7a.html  files_7a.html  functions_72.html  related_6f.html  search.js  typedefs_72.html  typedefs_7a.html
trunk/doc/latex/: examples.tex  main.tex  refman.tex  zsig_8hh.tex
trunk/include/: signaturet.hh  vec.hh  zpolbasist.hh  zsig.hh
trunk/src/: CMakeLists.txt  app_compute_signature.cc  app_paint_signature.cc  example_mesh.cc  example_sig.cc  example_zpol.cc  example_zproj.cc
